[package]
name = "octofetch"
version = "0.3.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
colored = "2.0.0"
box_drawing = "0.1.2"
crossterm = "0.22.1"
