[package]
name = "octofetch"
version = "0.3.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
colored = "2.0.0"
crossterm = "0.22.1"
